--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rahul Kumar - Professional Portfolio Website</title>
+    <meta name="description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
+    <meta name="keywords" content="Rahul Kumar, web developer, React developer, frontend developer, portfolio, software engineer, JavaScript, TypeScript" />
+    <meta name="author" content="Rahul Kumar" />
+    <meta property="og:title" content="Rahul Kumar - Professional Portfolio Website" />
+    <meta property="og:description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
+    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rahul Kumar - Professional Portfolio Website" />
+    <meta name="twitter:description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
+    <meta name="twitter:image" content="/favicon.png" />
+    <meta name="theme-color" content="#111827" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <title>Rahul Kumar - Professional Portfolio Website | Web Developer</title>
+    <!-- Google fonts preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Structured data for better SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Rahul Kumar",
+        "url": "https://heyrahul05.vercel.app",
+        "jobTitle": "Web Developer",
+        "knowsAbout": ["React", "TypeScript", "JavaScript", "Web Development"],
+        "image": "/favicon.png"
+      }
+    </script>
   </body>
 </html>
