Update Open Graph and Twitter meta descriptions for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="Rahul Kumar, web developer, React developer, frontend developer, portfolio, software engineer, JavaScript, TypeScript" />
     <meta name="author" content="Rahul Kumar" />
     <meta property="og:title" content="Rahul Kumar - Professional Portfolio Website" />
-    <meta property="og:description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
+    <meta property="og:description" content="It's my portfolio website  showcasing skills in web development, projects, and professional experience." />
     <meta property="og:image" content="/favicon.png" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Rahul Kumar - Professional Portfolio Website" />
-    <meta name="twitter:description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
+    <meta name="twitter:description" content="It's my portfolio website showcasing skills in web development, projects, and professional experience." />
     <meta name="twitter:image" content="/favicon.png" />
     <meta name="theme-color" content="#111827" />
     <link rel="apple-touch-icon" href="/favicon.png" />
