--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/img1.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rahul Kumar's professional portfolio showcasing skills in web development, projects, and professional experience." />
     <meta name="keywords" content="Rahul Kumar, web developer, React developer, frontend developer, portfolio, software engineer, JavaScript, TypeScript" />
     <meta name="author" content="Rahul Kumar" />
     <meta property="og:title" content="Rahul Kumar - Professional Portfolio Website" />
     <meta property="og:description" content="It's my portfolio website  showcasing skills in web development, projects, and professional experience." />
-    <meta property="og:image" content="/src/assets/img1.png" />
+    <meta property="og:image" content="/favicon.png" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Rahul Kumar - Professional Portfolio Website" />
     <meta name="twitter:description" content="It's my portfolio website showcasing skills in web development, projects, and professional experience." />
-    <meta name="twitter:image" content="/src/assets/img1.png" />
+    <meta name="twitter:image" content="/favicon.png" />
     <meta name="theme-color" content="#111827" />
-    <link rel="apple-touch-icon" href="/src/assets/img1.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <title>Rahul Kumar - Professional Portfolio Website | Web Developer</title>
     <!-- Google fonts preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,7 +34,7 @@
         "url": "https://heyrahul05.vercel.app",
         "jobTitle": "Web Developer",
         "knowsAbout": ["React", "TypeScript", "JavaScript", "Web Development"],
-        "image": "/src/assets/img1.png"
+        "image": "/favicon.png"
       }
     </script>
   </body>
